--- a/expressive-web/home.css
+++ b/expressive-web/home.css
@@ -3,6 +3,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+small{
+   color: lightskyblue;
+    margin-top: 60px;
+}
+
 .image-container{
     top: 0;
         left: 0;
