--- a/html-css-workshop/layouts/index.html
+++ b/html-css-workshop/layouts/index.html
@@ -12,6 +12,7 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
+        <div class="circle"></div>
     </div>
 
    <div>< 
