--- a/html-css-workshop/layouts/index.html
+++ b/html-css-workshop/layouts/index.html
@@ -13,6 +13,7 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="circle"></div>
+        <div class="triangle"></div>
     </div>
 
    <div>< 
