--- a/html-css-workshop/layouts/index.html
+++ b/html-css-workshop/layouts/index.html
@@ -16,7 +16,7 @@
         <div class="triangle"></div>
     </div>
 
-   <div>< 
+   <div> 
     <div class="inner-cont">
         <div class="box"></div>
         <div class="box"></div>
