--- a/html-css-workshop/layouts/index.html
+++ b/html-css-workshop/layouts/index.html
@@ -14,6 +14,7 @@
         <div class="square"></div>
         <div class="circle"></div>
         <div class="triangle"></div>
+        <div class="rectangle"></div>
     </div>
 
    <div> 
