added more triangle from different sides

--- a/html-css-workshop/layouts/index.html
+++ b/html-css-workshop/layouts/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>html and css demo</title>
+    <title>Drawing shapes - HTML & CSS</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 
@@ -10,10 +10,12 @@
 
     <div class="outer-cont">
         <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
         <div class="circle"></div>
-        <div class="triangle"></div>
+        <div class="triangle-down"></div>
+        <div class="triangle-left-up"></div>
+        <div class="triangle-left-down"></div>
+        <div class="triangle-right-up"></div>
+        <div class="triangle-right-down"></div>
         <div class="triangle-up"></div>
         <div class="rectangle"></div>
     </div>
