--- a/html-css-workshop/layouts/style.css
+++ b/html-css-workshop/layouts/style.css
@@ -15,7 +15,7 @@ body {
 .outer-cont {
     background: rgb(233, 101, 101);
     border: 3px dashed black;
-    width: 100%;
+    width: 125%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -43,7 +43,7 @@ body {
 }
 
 /*Must set width/height to 0 and adust border bottom, left, & r (transparent) to create triangle*/
-.triangle{
+.triangle-down{
     width: 0;
     height: 0;
     border-bottom: 150px solid rgb(9, 42, 250);
@@ -59,6 +59,48 @@ body {
     border-top: 150px solid pink;
     border-left: 75px solid transparent;
     border-right: 75px solid transparent;
+    margin: 15px;
+}
+
+/*w/h = 0, make border-left biggest, border-bottom = top of tri is wide, border-top = bottom of tri is wide */
+.triangle-left-up{
+    width: 0;
+    height: 0;
+    border-left: 150px solid orange;
+    border-right: 75px solid transparent;
+    border-top: 150px solid transparent;
+    margin: 15px;
+}
+
+/*w/h = 0, make border-left biggest, border-bottom = top of tri is wide,  */
+.triangle-left-down {
+    width: 0;
+    height: 0;
+    border-left: 150px solid forestgreen;
+    border-right: 75px solid transparent;
+    border-bottom: 150px solid transparent;
+    margin: 15px;
+}
+
+
+
+/*w/h = 0, make border-right biggest, border-bottom has to be wide*/
+.triangle-right-up{
+    width: 0;
+    height: 0;
+    border-right: 150px solid silver;
+    border-left: 75px solid transparent;
+    border-bottom: 150px solid transparent;
+    margin: 15px;
+}
+
+/*w/h = 0, make border-right biggest, border-top has to be wide*/
+.triangle-right-down {
+    width: 0;
+    height: 0;
+    border-right: 150px solid lavender;
+    border-left: 75px solid transparent;
+    border-top: 150px solid transparent;
     margin: 15px;
 }
 
