--- a/html-css-workshop/shapes/style.css
+++ b/html-css-workshop/shapes/style.css
@@ -42,6 +42,15 @@ body {
     margin: 15px;
 }
 
+/*To create oval, need unequal w/h*/
+.oval{
+    background-color:brown;    
+    width: 70px;
+    height: 150px;
+    border-radius: 80%;
+    margin: 15px;
+}
+
 /*When creating triangles, you are technically creating squares but making one side (border) transparent instead of solid*/
 
 /*Must set width/height to 0 and adust border bottom, left, & r (transparent) to create triangle*/
