--- a/baseball/style.css
+++ b/baseball/style.css
@@ -1,10 +1,19 @@
-body{
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+}
+
+
+/* body{
     background-color: rgb(249, 252, 246);
     margin: 0;
     padding: 0;
-}
+} */
 h1{
     font-style: italic;
+    font-size: 20px;
     text-align: center;
     background: linear-gradient(to right,
                     #041E42,
@@ -36,7 +45,7 @@ img {
     /*move the button to the center*/
     position: absolute;
     left: 50%; 
-    top: 18%;
+    top: 7%;
     transform: translate(-50%, -50%);
   }
 
