--- a/baseball/style-alt.css
+++ b/baseball/style-alt.css
@@ -5,6 +5,7 @@ body{
 }
 h1{
     font-style: italic;
+    font-size: 20px;
     text-align: center;
     background: linear-gradient(to right,
                     #041E42,
@@ -36,7 +37,7 @@ img {
     /*move the button to the center*/
     position: absolute;
     left: 50%; 
-    top: 18%;
+    top: 8%;
     transform: translate(-50%, -50%);
   }
 
