--- a/baseball/style-zoom.css
+++ b/baseball/style-zoom.css
@@ -1,8 +1,16 @@
-body{
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+}
+
+
+/* body{
     background-color: rgb(249, 252, 246);
     margin: 0;
     padding: 0;
-}
+} */
 h1{
     font-style: italic;
     font-size: 20px;
@@ -37,7 +45,7 @@ img {
     /*move the button to the center*/
     position: absolute;
     left: 50%; 
-    top: 8%;
+    top: 7%;
     transform: translate(-50%, -50%);
   }
 
