--- a/baseball/test.css
+++ b/baseball/test.css
@@ -15,3 +15,22 @@ h1{
             background-clip: text; /*determines the background painting area for gradient, if not added, it would just color background instead of text*/
             color: transparent; 
 }
+
+button{
+    border: 1px 2px red solid;
+    border-radius: 15px;
+    padding: 3px;
+    margin: 10px;
+    color: brown;
+    background-color: gold;
+    /*move the button to the center*/
+    position: absolute;
+    left: 50%; 
+    top: 8%;
+    transform: translate(-50%, -50%);
+  }
+
+  button:hover{
+    color: gold;
+    background-color: brown;
+  }
