--- a/expressive-web/unused-code/style-responsive.css
+++ b/expressive-web/unused-code/style-responsive.css
@@ -3,7 +3,6 @@ body{
   background-color: rgb(22, 20, 20);
   background-image: url(images/train-tracks.svg);
   background-repeat: repeat-y;
-  /*will repeat image vertically*/
   background-size: 30%;
   background-position: center;
 }
@@ -14,12 +13,13 @@ h2{
   margin-bottom: 25px;
 }
 
-/*STYLE THE CONTAINER AND TRAIN IMAGE*/
+/* STYLE THE CONTAINER AND TRAIN IMAGE */
 .graphic {
   position: sticky;
-  top: 20%;
-  left: 70%;
-  height: 300px;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center; 
@@ -27,31 +27,22 @@ h2{
 
 .ball {
   border-radius: 100%;
-  width: 300px;
-  height: 300px;
-  transition: all 5s ease-in;
-  margin-left: 90px;
+  width: 20vw;              /* responsive */
+  min-width: 150px;         /* keep it from disappearing */
+  max-width: 300px;         /* don’t get too big */
+  height: auto;
+  transition: all 0.5s ease-in-out;
+  margin: auto;
+  display: block;
 }
 
-/*Code to try to make it responsive*/
-/* .ball{
-  position: absolute;
-  left: 50%;                   /* place in horizontal center */
-  /* transform: translateX(-50%); keep centered regardless of size */
-  /* bottom: 5vh;                 adjust to sit on the "track" */
-  /* width: 20vw;                 default responsive size */
-  /* max-width: 400px;            safety limit */
-  /* height: auto; */
-  /* border-radius: 100%; */
-/* } */
 
 img-edit{
   display: flex;
   flex-direction: column;
 }
 
-
-/*STYLE THE SECTION AND SCROLLY*/
+/* STYLE THE SECTION AND SCROLLY */
 section {
   flex-basis: 50%;
 }
@@ -63,24 +54,25 @@ section {
 #scrolly {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   height: auto;
   position: relative;
 }
 
-
-/*STYLE THE STATIONS*/
+/* STYLE THE STATIONS */
 .scroll-step {
-  height: 600px;
-  width: 360px;
+  min-height: 60vh;
+  width: 100%;
+  max-width: 500px;
   border: none;
   color: bisque;
   font-weight: 700;
-  
+  margin: auto;
+  padding: 1rem;
 }
 
-/*Use linear gradient to style station (rgb(a,b,c) x% y% - x% = where color starts on page, y% = where it terminates.*/
-
-/*Platforms with only a local track*/
+/* Platforms with only a local track */
 .second,.fourth,.fifth,.seventh,.tenth,.eleventh{
   background: linear-gradient(to right,
         rgb(96, 95, 95) 20% 75%,
@@ -89,7 +81,7 @@ section {
         rgb(229, 194, 20) 95%);
 }
 
-/*Platforms that have express/local track*/
+/* Platforms that have express/local track */
 .first,.sixth,.ninth{
   background: linear-gradient(to right,
         rgb(218, 166, 45) 0% 10%,
@@ -107,8 +99,6 @@ section {
         rgb(96, 95, 95) 85% 95%,
         rgb(229, 194, 20) 95%);
 }
-
-
 
 .eighth{
   background: linear-gradient(to right,
@@ -153,24 +143,23 @@ section {
     rgb(218, 166, 45) 90%);
 }
 
-
-/*STYLE STATION NAMES*/
+/* STYLE STATION NAMES */
 p{
   border: 2px solid black;
   background-color: black;
-  font-size: 24px;
+  font-size: clamp(16px, 2vw, 24px);
   margin: auto;
   text-align: center;
   color: white;
 }
 
-/*STYLE HOME LINK*/
+/* STYLE HOME LINK */
 .home-link{
     color: orange;
     font-size: 12px;
     left: 4px;
     position: sticky;
-    z-index: 1; /*This will bring the element forward and place it on top of another element provided the two are on the same level (non-nested)*/
+    z-index: 1;
 }
 
 .home-link:hover{
@@ -181,16 +170,13 @@ p{
     text-align: center;
 }
 
-
-/*STYLE THE STATION CONTAINER, SIGHT IMAGES, AND LINKS*/
+/* STYLE THE STATION CONTAINER, SIGHT IMAGES, AND LINKS */
 .sights{
     display: flex;
     flex-direction: column;
-    
     font-size: 18px;
     align-items: center;
 }
-
 
 ul{
   list-style: none;
@@ -209,66 +195,34 @@ ul,a:hover{
   color: rgb(134, 51, 189);
 }
 
+/* SPACE OUT STATIONS */
+.short-stop{ margin-bottom: 130%; }
+.med-stop{ margin-bottom: 200%; }
+.long-stop{ margin-bottom: 350%; }
+.longest-stop{ margin-bottom: 600%; }
 
-/*SPACE OUT STATIONS*/
-.short-stop{
-    margin-bottom: 130%;
-}
-
-.med-stop{
-  margin-bottom: 200%;
-}
-
-.long-stop{
-  margin-bottom: 350%;
-}
-
-.longest-stop{
-  margin-bottom: 600%;
-}
-
-.overlay-text {
-  display: flex;
-    flex-direction: row;
-    height: auto;
-    position: relative;
-  top: 20%;
-  left: 0%;
-  transform: translate(5%, -10%);
-  animation-duration: 10s;
-  animation-name: slidein;
-}
-
-/*STYLE SCROLLY ELEMENTS*/
+/* SCROLLY TEXT */
 .intro{
   color: bisque;
   animation: 2s linear 5s infinite alternate slidein;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: clamp(14px, 2vw, 20px);
+  text-align: center;
+  padding: 1rem;
 }
 
-.intro.visible{
-  opacity: 1;
-}
+.intro.visible{ opacity: 1; }
 
 .intro,
-.end {
-  height: 200px;
-}
+.end { height: auto; }
 
 .end {
   margin-top: 200px;
   color: bisque;
-  font-size: 20px;
+  font-size: clamp(14px, 2vw, 20px);
   text-align: center;
-  text-wrap: wrap;
-  animation-name: fadeInOut, moveLeft300px, bounce;
-    animation-duration: 5.5s, 5s, 1s;
-    animation-iteration-count: 2, 1, 5;
-    animation-delay: 3s;
-  
+  padding: 1rem;
 }
-
 
 .scrolling-text {
   position: relative;
@@ -279,89 +233,36 @@ ul,a:hover{
 button{
   color: blueviolet;
   font-weight: 700;
-  background: linear-gradient(rgb(255, 94, 0) 40%,
-    yellow 30%,
-    rgb(176, 176, 199) 65%);
+  background: linear-gradient(rgb(255, 94, 0) 40%, yellow 30%, rgb(176, 176, 199) 65%);
   margin: 30px auto;
   border: 2px solid rgb(234, 241, 21);
   border-radius: 10%;
+  display: block;
 }
-
-
 
 @keyframes scroll-left {
-  from {
-    left: 100%;
-    width: 500%;
-  }
-
-  to {
-    left: -100%;
-    width: 500%;
-  }
+  from { left: 100%; width: 500%; }
+  to { left: -100%; width: 500%; }
 }
 
+.ball.on-track { bottom: 10vh; }
 
-
-@keyframes fadeInOut{
-  from {
-      left: 100%;
-      width: 500%;
-    }
-  
-    to {
-      left: -100%;
-      width: 500%;
-    }
-}  
-
-/* .ball {
-  position: absolute;
-  left: 50%;                   /* place in horizontal center */
-  /* transform: translateX(-50%); /* keep centered regardless of size */
-  /*bottom: 5vh;                 /* adjust to sit on the "track" */
-  /*width: 20vw;                 /* default responsive size */
-  /*max-width: 400px;            /* safety limit */
-  /*height: auto;
-} */ 
-
-.ball.on-track {
-  bottom: 10vh; /* moves train onto track when hovered */
-}
-
-
-/*/
-/* @keyframes slidein {
-  from {
-    top: 10%; div container starts from 10% at top of page */
-    /* left: 50%; div moves to the left to the middle of the screen */
-   /* margin-right: 25%; /*moves the div to the left [ use 50% to move to middle of the screen]*/
- /* } */
-/*
-  to {
-    bottom: 50%; /*div moves to the bottom of the screen*/
-  /* }
-} */
-/* **/ 
-
-
-
+/* MEDIA QUERIES */
 @media (max-width: 1200px) {
-  img {
-      max-width: 100%;
-      max-height: 100%;
-  }
+  img { max-width: 100%; height: auto; }
+  ul, li { font-size: 12px; }
+  a { font-size: 16px; }
+}
 
-  p {
-      font-size: 16px;
-  }
+@media (max-width: 992px) {
+  #scrolly { flex-direction: column; align-items: center; }
+  .scroll-step { max-width: 90%; margin-bottom: 4rem; }
+  .graphic { top: 10%; }
+  .ball { width: 30vw; max-width: 200px; }
+}
 
-  ul,
-  li {
-      font-size: 10px;
-  }
-
-  a{
-      font-size: 18px;
-  }
+@media (max-width: 576px) {
+  .ball { width: 40vw; max-width: 150px; }
+  .intro, .end { font-size: 14px; }
+  p { font-size: 14px; }
 }
